Admin user auth Cleaned code