@@ -25,37 +25,8 @@ public class PoiCsvSyncService {
 
     private final PoiRepository poiRepository;
 
-    // Índices do CSV pois.csv
-    // id,name,name_pt,category,subcategory,architect,year,
-    // description,wikipedia_url,sipa_id,lat,lon,source
-    private static final int IDX_ID          = 0;
-    private static final int IDX_NAME        = 1;
-    private static final int IDX_NAME_PT     = 2;
-    private static final int IDX_CATEGORY    = 3;
-    private static final int IDX_SUBCATEGORY = 4;
-    private static final int IDX_ARCHITECT   = 5;
-    private static final int IDX_YEAR        = 6;
-    private static final int IDX_DESC        = 7;
-    private static final int IDX_WIKI        = 8;
-    private static final int IDX_SIPA        = 9;
-    private static final int IDX_LAT         = 10;
-    private static final int IDX_LON         = 11;
-    private static final int IDX_SOURCE      = 12;
-
     public PoiCsvSyncService(PoiRepository poiRepository) {
         this.poiRepository = poiRepository;
-    }
-
-    /**
-     * Pequeno helper para obter campo por índice, já com trim.
-     */
-    private String field(CSVRecord record, int idx) {
-        try {
-            String v = record.get(idx);
-            return v != null ? v.trim() : null;
-        } catch (Exception e) {
-            return null;
-        }
     }
 
     @Transactional
@@ -64,27 +35,20 @@ public class PoiCsvSyncService {
             throw new IllegalArgumentException("CSV de POIs não encontrado: " + poisCsv);
         }
 
-        log.info("[PoiCsvSync] Iniciar sync CSV={} imagens={}", poisCsv, imagesCsv);
+        log.info("[PoiCsvSync] Início | poisCsv={} | imagesCsv={}", safeName(poisCsv), safeName(imagesCsv));
 
         Map<Integer, Poi> poiByCsvId = importPois(poisCsv);
-
         importImages(imagesCsv, poiByCsvId);
 
-        log.info("[PoiCsvSync] Concluído. POIs na BD: {}", poiRepository.count());
+        log.info("[PoiCsvSync] Fim | total POIs na BD={}", poiRepository.count());
     }
 
-    /**
-     * Importa/atualiza POIs a partir de pois.csv.
-     * - Usa o ID do CSV apenas como chave lógica (para o segundo CSV de imagens).
-     * - Faz matching por SIPA ID (se existir) para atualizar em vez de duplicar.
-     */
     private Map<Integer, Poi> importPois(Resource poisCsv) {
-        Map<Integer, Poi> map = new HashMap<>();
+        Map<Integer, Poi> csvIdToPoi = new HashMap<>();
 
-        int total = 0;
-        int created = 0;
-        int updated = 0;
-        int skipped = 0;
+        int total = 0, created = 0, updated = 0, skipped = 0;
+
+        List<Poi> toSave = new ArrayList<>();
 
         try (Reader reader = new BufferedReader(
                 new InputStreamReader(poisCsv.getInputStream(), StandardCharsets.UTF_8))) {
@@ -93,40 +57,41 @@ public class PoiCsvSyncService {
                     .withDelimiter(',')
                     .withFirstRecordAsHeader()
                     .withIgnoreEmptyLines()
+                    .withTrim()
                     .parse(reader);
 
-            for (CSVRecord record : parser) {
+            for (CSVRecord r : parser) {
                 total++;
 
-                Integer csvId       = parseInt(field(record, IDX_ID));
-                String name         = field(record, IDX_NAME);
-                String namePt       = field(record, IDX_NAME_PT);
-                String category     = field(record, IDX_CATEGORY);
-                String subcategory  = field(record, IDX_SUBCATEGORY);
-                String architect    = field(record, IDX_ARCHITECT);
-                String yearText     = field(record, IDX_YEAR);
-                String description  = field(record, IDX_DESC);
-                String wikipediaUrl = field(record, IDX_WIKI);
-                String sipaId       = field(record, IDX_SIPA);
-                Double lat          = parseDouble(field(record, IDX_LAT));
-                Double lon          = parseDouble(field(record, IDX_LON));
-                String source       = field(record, IDX_SOURCE);
+                Integer csvId = parseInt(get(r, "id"));
+                String name = get(r, "name");
+                String namePt = get(r, "name_pt");
+                String category = get(r, "category");
+                String subcategory = get(r, "subcategory");
+                String architect = get(r, "architect");
+                String yearText = get(r, "year");
+                String description = get(r, "description");
+                String wikipediaUrl = get(r, "wikipedia_url");
+                String sipaId = get(r, "sipa_id");
+                Double lat = parseDouble(get(r, "lat"));
+                Double lon = parseDouble(get(r, "lon"));
+                String source = get(r, "source");
 
                 if (csvId == null) {
                     skipped++;
                     continue;
                 }
 
-                // Campos mínimos obrigatórios
-                if (name == null || name.isBlank() || lat == null || lon == null) {
+                // mínimos
+                if (isBlank(name) || lat == null || lon == null) {
                     skipped++;
                     continue;
                 }
 
                 Poi poi = null;
 
-                // MATCHING: SIPA ID → se existir, tentamos atualizar em vez de criar
-                if (sipaId != null && !sipaId.isBlank()) {
+                // MATCHING primário: SIPA ID
+                if (!isBlank(sipaId)) {
                     poi = poiRepository.findBySipaId(sipaId).orElse(null);
                 }
 
@@ -138,51 +103,58 @@ public class PoiCsvSyncService {
                 }
 
                 poi.setName(name);
-                poi.setNamePt(namePt != null && !namePt.isBlank() ? namePt : name);
+                poi.setNamePt(!isBlank(namePt) ? namePt : name);
+
                 poi.setCategory(category);
                 poi.setSubcategory(subcategory);
                 poi.setDescription(description);
+
                 poi.setLat(lat);
                 poi.setLon(lon);
+
                 poi.setWikipediaUrl(wikipediaUrl);
                 poi.setSipaId(sipaId);
-                poi.setSource(source != null && !source.isBlank() ? source : "csv:pois");
 
-                // estes setters assumem que já tens os campos em Poi
+                poi.setSource(!isBlank(source) ? source : "csv:pois");
+
+                // extra
                 poi.setArchitect(architect);
                 poi.setYearText(yearText);
 
-                poi = poiRepository.save(poi);
+                toSave.add(poi);
 
-                // ligamos o ID lógico do CSV a este POI (para o CSV de imagens)
-                map.put(csvId, poi);
+                // associação csvId -> poi (depois de salvar, fazemos map com o "saved")
+                // por enquanto guardamos o csvId num map auxiliar
+                csvIdToPoi.put(csvId, poi);
             }
 
-            log.info(
-                    "[PoiCsvSync] Linhas lidas={} criados={} atualizados={} ignorados={}",
-                    total, created, updated, skipped
-            );
+            // save batch (1 roundtrip grande)
+            List<Poi> saved = poiRepository.saveAll(toSave);
+
+            // IMPORTANT: o map csvIdToPoi já aponta para os objetos que foram saved (mesmas referências),
+            // mas para ser super explícito, garantimos que estão “managed”.
+            // (Não precisamos de re-map por índice; o JPA mantém identidade no mesmo contexto)
+            log.info("[PoiCsvSync] POIs | lidos={} | criados={} | atualizados={} | ignorados={}",
+                    total, created, updated, skipped);
 
         } catch (Exception e) {
             log.error("[PoiCsvSync] Erro ao importar POIs", e);
             throw new RuntimeException("Erro ao importar POIs", e);
         }
 
-        return map;
+        return csvIdToPoi;
     }
 
-    /**
-     * Importa imagens extra (poi_images.csv) e anexa a cada POI com base no id lógico do CSV.
-     */
     private void importImages(Resource imagesCsv, Map<Integer, Poi> poiByCsvId) {
         if (imagesCsv == null || !imagesCsv.exists()) {
-            log.warn("[PoiCsvSync] CSV de imagens não encontrado ({}), a ignorar.", imagesCsv);
+            log.warn("[PoiCsvSync] CSV de imagens não encontrado, a ignorar. ({})", safeName(imagesCsv));
             return;
         }
 
-        int total = 0;
-        int attached = 0;
-        int missingPoi = 0;
+        int total = 0, attached = 0, missingPoi = 0, skipped = 0;
+
+        // batch: acumulamos alterações por POI e fazemos saveAll no fim
+        Set<Poi> touched = new HashSet<>();
 
         try (Reader reader = new BufferedReader(
                 new InputStreamReader(imagesCsv.getInputStream(), StandardCharsets.UTF_8))) {
@@ -191,15 +163,17 @@ public class PoiCsvSyncService {
                     .withDelimiter(',')
                     .withFirstRecordAsHeader()
                     .withIgnoreEmptyLines()
+                    .withTrim()
                     .parse(reader);
 
-            for (CSVRecord record : parser) {
+            for (CSVRecord r : parser) {
                 total++;
 
-                Integer csvId   = parseInt(trim(record, "poi_id"));
-                String imageUrl = trim(record, "image_url");
+                Integer csvId = parseInt(get(r, "poi_id"));
+                String imageUrl = get(r, "image_url");
 
-                if (csvId == null || imageUrl == null || imageUrl.isBlank()) {
+                if (csvId == null || isBlank(imageUrl)) {
+                    skipped++;
                     continue;
                 }
 
@@ -209,22 +183,27 @@ public class PoiCsvSyncService {
                     continue;
                 }
 
-                List<String> images = poi.getImages() != null
-                        ? new ArrayList<>(poi.getImages())
-                        : new ArrayList<>();
+                // mantém ordem e evita duplicados
+                LinkedHashSet<String> set = new LinkedHashSet<>();
+                if (poi.getImages() != null) set.addAll(poi.getImages());
+                set.add(imageUrl);
 
-                if (!images.contains(imageUrl)) {
-                    images.add(imageUrl);
-                    poi.setImages(images);
-                    poiRepository.save(poi);
+                int before = poi.getImages() != null ? poi.getImages().size() : 0;
+                List<String> newList = new ArrayList<>(set);
+
+                if (newList.size() != before) {
+                    poi.setImages(newList);
+                    touched.add(poi);
                     attached++;
                 }
             }
 
-            log.info(
-                    "[PoiCsvSync] Imagens: lidas={} anexadas={} poi_nao_encontrado={}",
-                    total, attached, missingPoi
-            );
+            if (!touched.isEmpty()) {
+                poiRepository.saveAll(touched);
+            }
+
+            log.info("[PoiCsvSync] Imagens | lidas={} | anexadas={} | poi_nao_encontrado={} | ignoradas={}",
+                    total, attached, missingPoi, skipped);
 
         } catch (Exception e) {
             log.error("[PoiCsvSync] Erro ao importar imagens", e);
@@ -232,32 +211,32 @@ public class PoiCsvSyncService {
         }
     }
 
-    // Helpers genéricos
+    // ---------------- helpers ----------------
 
-    private String trim(CSVRecord record, String header) {
+    private static String safeName(Resource r) {
+        return r == null ? "null" : r.getDescription();
+    }
+
+    private static String get(CSVRecord r, String header) {
         try {
-            String v = record.get(header);
+            String v = r.get(header);
             return v != null ? v.trim() : null;
         } catch (Exception e) {
             return null;
         }
     }
 
-    private Integer parseInt(String v) {
-        if (v == null || v.isBlank()) return null;
-        try {
-            return Integer.parseInt(v.trim());
-        } catch (Exception e) {
-            return null;
-        }
+    private static boolean isBlank(String v) {
+        return v == null || v.trim().isEmpty();
     }
 
-    private Double parseDouble(String v) {
-        if (v == null || v.isBlank()) return null;
-        try {
-            return Double.parseDouble(v.trim().replace(",", "."));
-        } catch (Exception e) {
-            return null;
-        }
+    private static Integer parseInt(String v) {
+        if (isBlank(v)) return null;
+        try { return Integer.parseInt(v.trim()); } catch (Exception e) { return null; }
+    }
+
+    private static Double parseDouble(String v) {
+        if (isBlank(v)) return null;
+        try { return Double.parseDouble(v.trim().replace(",", ".")); } catch (Exception e) { return null; }
     }
 }
